auto update configs